--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "flyd": "^0.2.6",
-        "ramda": "^0.25.0"
+        "ramda": "^0.25.0",
+        "url-mapper": "^2.0.0"
     }
 }
