--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+    "author": "Daniil Velichko <danvelduck@gmail.com>",
     "name": "aludel",
     "version": "0.0.1",
-    "main": "./dist/main.js",
+    "main": "./dist/main",
+    "typings": "./dist/main",
     "scripts": {
-        "build": "tsc",
-        "app": "parcel ./app"
+        "prepublishOnly": "npm run build",
+        "build": "npm run clean & tsc -p .",
+        "app": "parcel ./app",
+        "clean": "rm -rf ./dist" 
     },
     "license": "MIT",
     "devDependencies": {
@@ -18,5 +22,9 @@
         "flyd": "^0.2.6",
         "ramda": "^0.25.0",
         "url-mapper": "^2.0.0"
-    }
+    },
+    "files": [
+        "./dist/main.js",
+        "./dist/main.d.ts"
+    ]
 }
