--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
     "author": "Daniil Velichko <danvelduck@gmail.com>",
     "name": "aludel",
-    "version": "0.0.1",
+    "description": "Web app framework with global store and tightly scoped components",
+    "version": "0.0.2",
+    "homepage": "https://github.com/squareduck/aludel",
     "main": "./dist/main",
     "typings": "./dist/main",
     "scripts": {
-        "prepublishOnly": "npm run build",
         "build": "npm run clean & tsc -p .",
         "app": "parcel ./app",
-        "clean": "rm -rf ./dist" 
+        "clean": "rm -rf ./dist"
     },
     "license": "MIT",
     "devDependencies": {
         "@types/mithril": "^1.1.12",
-        "@types/ramda": "^0.25.18",
+        "@types/seamless-immutable": "^7.1.1",
         "mithril": "^1.1.6",
         "parcel-bundler": "^1.6.2",
         "typescript": "^2.7.2"
     },
     "dependencies": {
         "flyd": "^0.2.6",
-        "ramda": "^0.25.0",
+        "seamless-immutable": "^7.1.3",
         "url-mapper": "^2.0.0"
     },
     "files": [
-        "./dist/main.js",
-        "./dist/main.d.ts"
+        "./dist/src/main.js",
+        "./dist/src/main.d.ts"
     ]
 }
