--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "license": "MIT",
     "devDependencies": {
+        "@types/history": "^4.6.2",
         "@types/mithril": "^1.1.12",
         "@types/seamless-immutable": "^7.1.1",
         "mithril": "^1.1.6",
@@ -21,6 +22,7 @@
     },
     "dependencies": {
         "flyd": "^0.2.6",
+        "history": "^4.7.2",
         "seamless-immutable": "^7.1.3",
         "url-mapper": "^2.0.0"
     },
