--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "flyd": "^0.2.6",
         "history": "^4.7.2",
+        "object-hash": "^1.2.0",
         "seamless-immutable": "^7.1.3",
         "url-mapper": "^2.0.0"
     },
