--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build": "npm run clean & tsc -p .",
         "app": "parcel ./demo",
         "clean": "rm -rf ./dist",
-        "pages": "parcel build ./demo --out-dir ./ --public-url ./"
+        "pages": "parcel build ./demo/index.html --out-dir ./ --public-url ./"
     },
     "license": "MIT",
     "devDependencies": {
