--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "author": "Daniil Velichko <danvelduck@gmail.com>",
     "name": "aludel",
-    "description": "Web app framework with global store and tightly scoped components",
+    "description":
+        "Web app framework with global store and tightly scoped components",
     "version": "0.0.10",
     "homepage": "https://github.com/squareduck/aludel",
     "repository": {
@@ -17,7 +18,8 @@
         "build": "npm run clean & tsc -p .",
         "app": "parcel ./demo",
         "clean": "rm -rf ./dist",
-        "pages": "parcel build ./demo --out-dir ./ --public-url ./"
+        "pages": "parcel build ./demo --out-dir ./ --public-url ./",
+        "test": "tsc; tape ./dist/test/**/*_test.js | tap-prettify -"
     },
     "license": "MIT",
     "devDependencies": {
@@ -35,8 +37,5 @@
         "seamless-immutable": "^7.1.3",
         "url-mapper": "^2.0.0"
     },
-    "files": [
-        "dist/src/index.js",
-        "dist/src/index.d.ts"
-    ]
+    "files": ["dist/src/index.js", "dist/src/index.d.ts"]
 }
