--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2016",
-    "outDir": "./dist",
-    "moduleResolution": "node",
-    "declaration": true,
-    "esModuleInterop": true
-  },
-  "include": [
-    "test/**/*.ts",
-    "src/**/*.ts",
-    "demo/**/*.ts"
-  ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "ES2016",
+        "outDir": "./dist",
+        "moduleResolution": "node",
+        "declaration": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true
+    },
+    "include": ["test/**/*.ts", "src/**/*.ts", "demo/**/*.ts"]
 }
