Refactor debug mode and add initial tests and todo tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "app": "parcel ./demo",
         "clean": "rm -rf ./dist",
         "pages": "parcel build ./demo --out-dir ./ --public-url ./",
-        "test": "ava-ts"
+        "test": "ava-ts ./test/**/*_test.ts"
     },
     "license": "MIT",
     "devDependencies": {
