--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "author": "Daniil Velichko <danvelduck@gmail.com>",
     "name": "aludel",
-    "description":
-        "Web app framework with global store and tightly scoped components",
+    "description": "Web app framework with global store and tightly scoped components",
     "version": "0.0.10",
     "homepage": "https://github.com/squareduck/aludel",
     "repository": {
@@ -24,22 +23,21 @@
     "license": "MIT",
     "devDependencies": {
         "@types/history": "^4.6.2",
-        "@types/mithril": "^1.1.12",
         "@types/seamless-immutable": "^7.1.1",
-        "@types/tape": "^4.2.32",
         "ava": "^0.25.0",
         "ava-ts": "^0.24.2",
-        "mithril": "^1.1.6",
         "parcel-bundler": "^1.6.2",
         "ts-node": "^5.0.1",
         "typescript": "^2.7.2"
     },
     "dependencies": {
-        "flyd": "^0.2.6",
         "history": "^4.7.2",
+        "immer": "^1.2.0",
         "object-hash": "^1.2.0",
-        "seamless-immutable": "^7.1.3",
         "url-mapper": "^2.0.0"
     },
-    "files": ["dist/src/index.js", "dist/src/index.d.ts"]
+    "files": [
+        "dist/src/index.js",
+        "dist/src/index.d.ts"
+    ]
 }
