--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "author": "Daniil Velichko <danvelduck@gmail.com>",
     "name": "aludel",
-    "description":
-        "Web app framework with global store and tightly scoped components",
+    "description": "Web app framework with global store and tightly scoped components",
     "version": "0.0.32",
     "homepage": "https://github.com/squareduck/aludel",
     "repository": {
@@ -34,6 +33,7 @@
     },
     "dependencies": {
         "history": "^4.7.2",
+        "immer": "^1.3.0",
         "lodash.get": "^4.4.2",
         "lodash.set": "^4.3.2",
         "object-hash": "^1.2.0",
